Fixed a scrolling bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@ body{
   justify-content: center;
 }
 
+.NoScroll{
+  touch-action: none;
+}
+
 .Title{
   color: var(--text);
   font-size: 3rem;
@@ -108,10 +112,6 @@ h1{
   .ColorsContainer{
     flex-direction: column;
     gap: 60px;
-  }
-  
-  .ColorsContainer{
-    touch-action: none;
   }
 
 }
